bookshelf-app/kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: my-node-app
  namespace: default
spec:
  selector:
    app: my-node-app
  ports:
  - protocol: TCP
    port: 80   # 外部に公開するポート
    targetPort: 13001  # Node.jsアプリケーションがリッスンするポート
  type: ClusterIP
